# neo4j-onto2ai-toolset

./: .env  .env.example  .gitignore  AGENTS.md  MANIFEST.in  MCP_README.md  Pipfile  README.md  README4LOADER.md  README4ONTO2AI_MCP.md  account_model.py  account_shacl.ttl  logger_config.py  main.py  person_model.py  person_shacl.ttl  requirements.txt  setup.py  simulate_tax_lifecycle.py  staging_schema.md  stagingdb_full_schema.json  stagingdb_schema_description.txt  supervisors.py  tax_pydantic_classes_v2.py  test_schema_extraction.py
agents/: tax62n_chatbot.py  tax62n_db_connect.py  tax62n_query_examples.py  taxbill_loader462n.py
ai_graph_flow/: langgraph_flow_model.py
ai_tools/: extract_pdf_data.py  knowlegeRAG.py  pdf2graph.py  travily-search.py
chatbots/: account_query_examples.py  auto_query_neo4j.py  cypher_corrector.py  cypher_excecution.py  cypher_exception.py  cypher_exception_handler.py  cypher_krag_utl.py  cypher_runner.py  cypher_syntax_corrector.py  cypher_validation.py  entrance_guard.py  kg_chatbot.py  kg_chatbot_guardrails.py  langgraph_state.py  langgraph_state_model.py  langraph_query2neo4j.py  llm_neo4j_connect.py  neo4j_exception.py  tax4jc_chatbot.py  tax4jc_query_examples.py
demo/: README.md  README4DEMO  demo_generator.py
docs/: configuration.md  interface-contract.md  (+6 more)
onto2ai_entitlement/: README.md  __init__.py  artifacts.py  pyproject.toml
onto2ai_entitlement/ontology/: Onto2AIEntitlement.rdf
onto2ai_entitlement/staging/: full_schema_model.json  neo4j_constraint.cypher  neo4j_query_context.md  pydantic_schema_model.py  schema_to_data_flow_smoke_test.py
onto2ai_parcel/: README.md  __init__.py  artifacts.py  pyproject.toml
onto2ai_parcel/ontology/: Parcel.rdf  __init__.py
onto2ai_parcel/staging/: __init__.py  neo4j_constraint.cypher  neo4j_query_context.md  parcel_schema_smoke_test.py  pydantic_parcel_model.py
(+296 files in other folders)
